hphp/test/zend/good/tests/classes/autoload/autoload_010.php.expectf
Fatal error: Undefined interface: UndefI in %s/autoload_010.php on line 3
